--- a/project.html
+++ b/project.html
@@ -7,64 +7,44 @@
     <title>My Calendar de Popis</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="light">
 
     <div class="calendar">
-    <div class="calendar-header">
-        <span class="month-picker" id="month-picker ">
-            July
-        </span>
-        <div class="year-picker">
-            <span class="year-change" id="prev-year">
-                <pre></pre>
-            </span>
-            <span id="year">2022</span>
-            <span class="year-change" id="next-year">
-                <pre>>></pre>
-            </span>
-        </div>
-    </div>
-
-    <div class="calendar-body">
-        <div class="calendar-week-day">
-            <div>sun</div>
-            <div>mon</div>
-            <div>tue</div>
-            <div>wed</div>
-            <div>thu</div>
-            <div>fri</div>
-            <div>sat</div>
-
-        </div>
-        <div class="calendar-days">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
-
-        </div>
-
-    </div>
-
-        <div class="calendar-footer">
-            <div class="toggle">
-               <span>dark mode</span>
-               <div class="dark-mode-switch">
-                <div class="dark-mode-switch-ident">
-
-                </div>
-               </div>
-
-
+        <div class="calendar-header">
+            <span class="month-picker" id="month-picker">February</span>
+            <div class="year-picker">
+                <span class="year-change" id="prev-year">
+                    <pre><</pre>
+                </span>
+                <span id="year">2021</span>
+                <span class="year-change" id="next-year">
+                    <pre>></pre>
+                </span>
             </div>
         </div>
-
-    <div class="month-list">
-
+        <div class="calendar-body">
+            <div class="calendar-week-day">
+                <div>Sun</div>
+                <div>Mon</div>
+                <div>Tue</div>
+                <div>Wed</div>
+                <div>Thu</div>
+                <div>Fri</div>
+                <div>Sat</div>
+            </div>
+            <div class="calendar-days"></div>
+        </div>
+        <div class="calendar-footer">
+            <div class="toggle">
+                <span>Dark Mode</span>
+                <div class="dark-mode-switch">
+                    <div class="dark-mode-switch-ident"></div>
+                </div>
+            </div>
+        </div>
+        <div class="month-list"></div>
     </div>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
